# annulus

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: README.md  devcontainer.json  docker-compose.dev.yml
.devcontainer/default/: devcontainer.json
.devcontainer/eval/: .env.example  README.md  devcontainer.json  docker-compose.eval.yml  pre-up.sh
apps/cli/: pyproject.toml
apps/cli/src/annulus_cli/: __init__.py  main.py  traces.py
apps/gateway/: pyproject.toml
apps/gateway/src/annulus_gateway/: __init__.py  deps.py  main.py
apps/gateway/src/annulus_gateway/routes/: chat.py  health.py
apps/gateway/tests/: test_health.py
config/: default.yaml  models.yaml
docker/: Dockerfile.dev  Dockerfile.gateway  docker-compose.yml
docs/: continue-config.example.yaml
docs/architecture/: adr-001-monorepo-uv.md  adr-002-host-ollama-docker-apps.md  adr-003-openai-compatible-gateway.md  adr-004-retrieval-tools-agent-loop.md  adr-005-frontier-escalation.md  adr-006-multi-client-architecture.md  adr-007-remote-compute-profiles.md  adr-008-agent-swarm-orchestration.md  adr-009-hybrid-retrieval-embeddings.md  adr-010-graphrag-lite.md  adr-011-governed-self-improvement.md  adr-012-target-native-sidecar-deployment.md  adr-013-model-tool-compatibility.md  adr-014-incremental-index-watch.md  adr-015-local-swe-assistant-v04.md  adr-016-typescript-client-layer.md  adr-017-skill-primitive.md  adr-018-agent-identity-configuration.md  adr-019-permission-capability-model.md  adr-020-data-egress-compliance-policy.md  adr-021-plan-before-act-protocol.md  adr-022-per-project-agent-policy.md  adr-023-provenance-evaluation-data-model.md  adr-024-scientific-workload-primitives.md  adr-template.md  vision.md
docs/architecture/reviews/: 2026-07-13-pre-v0.3-close-ai-review.md  README.md
docs/plans/: 2026-07-22-post-v030-adr-backlog-plan-prompt.md  README.md  adr-backlog-plan-prompt.md
docs/plans/sessions/: 2026-07-22-adr-backlog-issues.md  2026-07-22-adr-backlog-pr-structure.md
scripts/: probe_ollama_tools.py
