[project]
name = "annulus"
version = "0.1.0"
description = "Local-first agentic AI platform — Annulus monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annulus-cli",
    "annulus-gateway",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/router",
    "packages/trace",
    "apps/gateway",
    "apps/cli",
]

[tool.uv.sources]
annulus-core = { workspace = true }
annulus-router = { workspace = true }
annulus-trace = { workspace = true }
annulus-gateway = { workspace = true }
annulus-cli = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps"]
