[project]
name = "annulus-cli"
version = "0.2.0"
description = "Annulus command-line interface"
requires-python = ">=3.12"
dependencies = [
    "annulus-core",
    "annulus-retrieval",
    "annulus-trace",
    "httpx>=0.27",
    "typer>=0.12",
]

[tool.uv.sources]
annulus-core = { workspace = true }
annulus-retrieval = { workspace = true }
annulus-trace = { workspace = true }

[project.scripts]
annulus = "annulus_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/annulus_cli"]

[tool.hatch.build.targets.wheel.sources]
"src/annulus_cli" = "annulus_cli"
